# pomopivot

./: .gitignore  README.md  index.html  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  lib.rs  settings.rs  sound.rs  timer.rs  tray.rs
src/components/: CompletionOverlay.tsx  CountdownDisplay.tsx  MessageEditorDialog.tsx  ModeToggle.tsx  PomodoroInput.tsx  SettingsDialog.tsx  SettingsPage.tsx  SimpleInput.tsx  TitleBar.tsx
src/hooks/: useTimer.ts
